test/negative/internal_compiler_helper_spaced/Main.hx
class Main {
	static function main():Void {
		var profile:reflaxe /* gap */ . rust.RustProfile = Portable;
		trace(profile);
	}
}
